Optimize JSON reading by taking advantage of GSON JsonAdapters
This speeds up replay file loading by a factor of 200 - 300% (from 94ms to 33ms).

It would be WAY more efficient to read these files directly from binary rather than having to run the replay files through a third-party JSON deserialization program and streaming JSON data into an adapter, but this is a problem for later. The replay format is notoriously undocumented by Psyonix, and while community efforts are appreciated, they're unreliable. One way or another, I have to rely on a community solution...

Maybe one day I'll read from binary. I think it's smarter and would increase the speed of Aftershock's parsing significantly.

This commit omits the writing of per-replay Aftershock data to each replay's file (i.e. the "loaded" state, comments, and tags). These will be reintroduced later in a separate JSON file to hold replay state data in another file.